--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,18 @@
   margin: 0;
   padding: 0;
 }
+#nav {
+  float: left;
+}
+#test {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+#test {
+  background-color: #111;
+}
