--- a/css/main.css
+++ b/css/main.css
@@ -15,15 +15,13 @@
 #nav {
   float: left;
 }
-#test {
+#nav {
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
-
-/* Change the link color to #111 (black) on hover */
-#test {
+#nav {
   background-color: #111;
 }
