--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,13 @@
 #test {
   float: top;
 }
-#test a{
+#test{
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
-#test a:hover{
+#test:hover{
   background-color: #111;
 }
