--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  background-color: #A9A9A9;
 }
 #test:hover{
   background-color: #111;
