--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 *{
   margin: 0;
   padding: 0;
-  color: black;
-  background-color: grey;
+  color: red;
+  background-color: black;
 }
 #Title{
   text-align: center;
