--- a/css/main.css
+++ b/css/main.css
@@ -7,25 +7,31 @@
 #Title{
   text-align: center;
 }
-#nav {
+ul.topnav {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
-#test {
-  float: left;
-}
-#test{
+
+ul.topnav li {float: left;}
+
+ul.topnav li a {
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  background-color: #A9A9A9;
 }
-#test:hover{
-  background-color: #111;
-}
-.active {
-  background-color: #4CAF50;
+
+ul.topnav li a:hover:not(.active) {background-color: #111;}
+
+ul.topnav li a.active {background-color: #4CAF50;}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
 }
